--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -2,27 +2,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Tajawal", sans-serif;
+    font-family: zawgyi-one,"Tajawal", sans-serif;
     /*cursor: default;*/
-    
 }
 
-.login_btn{
+@font-face {
+    font-family: zawgyi-one;
+    src: url(../fonts/Zawgyi-One.ttf);
+}
+
+.login_btn {
     border: 2px solid #77d02f;
     color: #77d02f;
     font-weight: 600;
 }
-.login_btn:hover{
+
+.login_btn:hover {
     background-color: #77d02f;
     color: #fff;
     font-weight: 600;
 }
-.register_btn{
+
+.register_btn {
     border: 2px solid #77d02f;
     color: #77d02f;
     font-weight: 600;
 }
-.register_btn:hover{
+
+.register_btn:hover {
     background-color: #77d02f;
     color: #fff;
     font-weight: 600;
@@ -30,78 +37,88 @@
 
 /*package start*/
 
-.package p{
+.package p {
     font-family: Cambria;
     text-align: justify;
 }
-.package_title{
+
+.package_title {
     font-size: 1.8em;
     font-weight: 600;
 }
-.price{
+
+.price {
     font-size: 1.2em;
 }
-.pk_btn a{
-    color: #5c9f24 ;
+
+.pk_btn a {
+    color: #5c9f24;
     font-weight: 500;
     /*background-color: #77d02f;*/
-    border: 2px solid #5c9f24 ;
+    border: 2px solid #5c9f24;
 }
-.pk_btn a:hover,.pk_btn a:focus{
-    color: #fff ;
+
+.pk_btn a:hover,
+.pk_btn a:focus {
+    color: #fff;
     font-weight: 500;
     background-color: #5c9f24;
-    border: 2px solid #5c9f24 ;
+    border: 2px solid #5c9f24;
 }
 
 /*package end*/
 
-
-.mmst{
-    font-family: 'El Messiri';
+.mmst {
+    font-family: "El Messiri";
     font-weight: bold;
     /* font-family: 'Tangerine', cursive; */
-    color: #fff;
-    text-shadow: 2px 2px 3px #0c1505;
+    color: #33cc33;
+    text-shadow: 2px 2px 3px #145214;
 }
-.mmstp{
+
+.mmstp {
     color: #fff;
     text-shadow: 1px 1px 2px #000;
-
 }
-.nav-link{
+
+.nav-link {
     color: whitesmoke;
     border-bottom: 2px solid transparent;
     font-weight: 600;
     font-size: 1.1em;
 }
-.nav-link:hover,.nav-link:focus{
+
+.nav-link:hover,
+.nav-link:focus {
     font-weight: 550;
     border-bottom: 2px solid #77d02f;
     transform-style: flat;
-    color:  #77d02f;
+    color: #77d02f;
 }
-.dropdown-item:hover,.dropdown-item:focus{
+
+.dropdown-item:hover,
+.dropdown-item:focus {
     font-weight: 550;
     border-bottom: 2px solid #77d02f;
     transform-style: flat;
-    color:  #77d02f;
+    color: #77d02f;
     background-color: gray;
     text-shadow: 2px 2px 3px #000;
 }
-.navbar-brand{
+
+.navbar-brand {
     font-size: 2.2em;
     font-weight: 600;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+
 .mycontent p {
     font-family: "Zawgyi A Lan 5";
 }
 
 /* firmware_download_start */
 .p-head {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
     text-shadow: 1px 1px 4px whitesmoke;
 }
@@ -134,7 +151,6 @@ h4 {
     /*font-weight: 800;*/
 }
 
-
 /*box list start*/
 .siderbar ul {
     left: 0;
@@ -160,42 +176,48 @@ h4 {
     letter-spacing: 1px;
     font-size: 1.1em;
     color: #549121;
-
 }
-.siderbar ul li a:hover{
-    background:  #6cbb2a;
+
+.siderbar ul li a:hover {
+    background: #6cbb2a;
     color: white;
     cursor: grab;
     padding-left: 50px;
 }
-.tool_area{
+
+.tool_area {
     border-bottom: 1px solid #a19f9f;
 }
-.tool_area:hover{
+
+.tool_area:hover {
     box-shadow: 1px 1px 4px gray;
     cursor: pointer;
 }
-.box_header{
+
+.box_header {
     font-weight: 600;
     font-size: 1.5em;
     color: #3a3a3a;
     cursor: grab;
 }
-.tool_header{
+
+.tool_header {
     font-weight: 700;
     font-family: Cambria;
     color: #5c9f24;
     letter-spacing: 2px;
     text-shadow: 1px 1px 2px #487d1c;
 }
-.content a{
+
+.content a {
     text-decoration: none;
     color: #000;
 }
+
 /*box list end*/
 
 /*tools download start*/
-.box_img:hover{
+.box_img:hover {
     transform: scale(1.1);
 }
 
@@ -203,96 +225,115 @@ h4 {
 
 /*footer start*/
 
-.footer span,a{
+.footer span,
+a {
     text-decoration: none;
     color: #fff;
     display: block;
     line-height: 40px;
 }
 
-.footer_copy{
+.footer_copy {
     background-color: #6cbb2a;
     font-weight: 600;
     color: black;
 }
+
 /*team start*/
-.team_area,.team{
-    background-color: #429e24;
+.team_area,
+.team {
+    background-color: #6cbb2a;
 }
-.team_name{
+
+.team_name {
     font-weight: 600;
     font-size: 1.3em;
     font-family: "Tajawal", sans-serif;
 }
-.team_img2{
-    background-color: 	#429e24;
+
+.team_img2 {
+    background-color: #6cbb2a;
     border-bottom-left-radius: 30px;
 }
-.team_img2 img{
+
+.team_img2 img {
     opacity: 60%;
 }
-.team_img2 img:hover{
+
+.team_img2 img:hover {
     opacity: 100%;
     transform: scale(1.1);
-    transition: transform .5s ease;
-
-    
+    transition: transform 0.5s ease;
 }
-.team_detail{
+
+.team_detail {
     background-color: #fff;
-    color: #429e24;
+    color: #5c9f24;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
 }
 
 /*footer start*/
-.address{
+.address {
     font-size: 1.1em;
 }
-.address a:hover,.address a:focus{
-    color: #4da6ff;
+
+.address a:hover,
+.address a:focus {
+    color: #93d959;
+    text-shadow: 1px 1px 2px #6cbb2a;
 }
-.social_link a{
+
+.social_link a {
     cursor: pointer;
     font-size: 1.1em;
 }
-#facebook:hover,#facebook:focus{
+
+#facebook:hover,
+#facebook:focus {
     border: 1px solid #0066cc;
     font-weight: 600;
     color: #0066cc;
     transform: scale(1.1);
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
 }
-#twitter:hover,#twitter:focus{
+
+#twitter:hover,
+#twitter:focus {
     border: 1px solid #3399ff;
     font-weight: 600;
     color: #3399ff;
     transform: scale(1.1);
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
 }
-#youtube:hover,#youtube:focus{
+
+#youtube:hover,
+#youtube:focus {
     border: 1px solid #ff0000;
     font-weight: 600;
     color: #ff0000;
     transform: scale(1.1);
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
 }
 
 /* model list start */
-.models_header{
+.models_header {
     font-size: 1.2em;
     font-weight: 600;
 }
-.models_body:hover td{
+
+.models_body:hover td {
     background-color: whitesmoke;
 }
-.modeldown{
+
+.modeldown {
     border: 2px solid #5c9f24;
     font-weight: 600;
     letter-spacing: 2px;
 }
-.modeldown:hover{
+
+.modeldown:hover {
     border: 2px solid #5c9f24;
     background-color: #5c9f24;
     color: whitesmoke;
@@ -301,20 +342,23 @@ h4 {
     letter-spacing: 2px;
     box-shadow: 2px 3px #3c6818;
 }
-.pagination li a{
+
+.pagination li a {
     line-height: 20px;
 }
-.models h5{
+
+.models h5 {
     font-weight: 600;
 }
-.models:hover h5{
+
+.models:hover h5 {
     /* text-shadow: 1px 2px 2px #006600; */
     font-size: 1.3em;
     cursor: pointer;
     transform: scale(1.1);
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
     font-weight: 600;
-    color: #009900;;
-
+    color: #009900;
 }
 
+/* service */
